--- a/react-cv/src/styles/_settings.scss
+++ b/react-cv/src/styles/_settings.scss
@@ -5,7 +5,7 @@ $font-2: 'Acme', cursive;
 $font-3: 'Oswald', serif;
 
 $color-1: #2a1d52;
-$color-2: #6C77F4;
+$color-2: #c56cf0;
 $color-3: rgb(99, 164, 233);
 $color-4: #4FEDD2;
 $color-5: #36D0EA;
