--- a/react-cv/src/styles/pages/_contact.scss
+++ b/react-cv/src/styles/pages/_contact.scss
@@ -1,5 +1,5 @@
 .contactContent {
-  background: $color-3;
+  background: url(../../media/laptop.jpg) no-repeat center top/cover;
   border-radius: $borderRadius;
   width: 100%;
   overflow: hidden;
@@ -15,7 +15,7 @@
     grid-area: 1;
     width: 100%;
     position: relative;
-    background: $color-1;
+    
     height: 340px;
 
     &:before {
@@ -23,8 +23,8 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      background: url(../../media/map.jpg) no-repeat center top/cover;
-      filter: grayscale(100%);
+      //background: url(../../media/nasa.jpg) no-repeat center top/cover;
+      
     }
     &:after {
       content: '';
@@ -32,7 +32,7 @@
       height: 100%;
       position: absolute;
       top: 30px;
-      background: url(../../media/shape.svg) no-repeat center /cover;
+      
 
     }
   }
