contact page edit commit

--- a/react-cv/src/styles/_settings.scss
+++ b/react-cv/src/styles/_settings.scss
@@ -4,7 +4,7 @@ $font-1: 'Montserrat', sans-serif;
 $font-2: 'Acme', cursive;
 $font-3: 'Oswald', serif;
 
-$color-1: #2a1d52;
+$color-1: #12191e;
 $color-2: #c56cf0;
 $color-3: rgb(99, 164, 233);
 $color-4: #4FEDD2;
