--- a/react-cv/src/styles/pages/_home.scss
+++ b/react-cv/src/styles/pages/_home.scss
@@ -14,7 +14,7 @@
     position: absolute;
     height: 100%;
     width: inherit;
-    background: url('../../media/christin.jpg') no-repeat center/cover;
+    background: none; //url('../../media/christin.jpg') no-repeat center/cover;
     z-index: -1;
     filter: brightness(40%);
     }
