Home page update commit

--- a/react-cv/src/styles/components/_navigation.scss
+++ b/react-cv/src/styles/components/_navigation.scss
@@ -114,6 +114,7 @@
       text-align: center;
       letter-spacing: 0.1rem;
       font-size: .7rem;
+      color: $color-4;
 
       a, a:visited {
         color: $color-5;
